--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,24 @@
 [tool.poetry]
 name = "az-monitor-py-logging"
 version = "0.1.0"
-description = ""
+description = "Loging helper for Azure Monitor and Open Census"
 authors = ["Shawn Cicoria <github@cicoria.com>"]
+license = "Apache-2.0"
+readme = "README.md"
+homepage = "https://github.com/cicorias/az-monitor-py-logging-pkg/README.md"
+documentation = "https://github.com/cicorias/az-monitor-py-logging-pkg/README.md"
+keywords = ["azure", "monitor", "cloud"]
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+azure-functions = "^1.6.0"
+opencensus-ext-azure = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
