--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine poetry
+    - name: Build Package
+      run: |
+        python -m poetry build
+    - name: Push release
+    - uses: actions/upload-artifact@v2
+      with:
+        name: azfunctionsmonitor
+        path: dist/
+    
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
@@ -29,4 +38,4 @@ jobs:
       run: |
         python -m poetry build
         python -m poetry publish --username ${{ secrets.PYPI_USERNAME }} --password "${{ secrets.PYPI_PASSWORD }}"
-        twine upload dist/*
+        # twine upload dist/*
