--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ opencensus-ext-azure = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+flake8 = "^3.8"
+pytest = "^6.2"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
