--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,12 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "label" : "make release",
+      "type" : "shell",
+      "problemMatcher":[],
+      "command": "source $HOME/.zshrc && source .venv/bin/activate && export VERSION=$(python -c \"import azfunctionsmonitor; print(azfunctionsmonitor.__version__);\") && gh release create v$VERSION -t \"automated build\" -n \"version bump\""
     }
   ]
 }
