--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ opencensus-ext-azure = "^1.0.7"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8"
 pytest = "^6.2"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
